--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Fork Me! FCC: Test Suite Template</title>
+  <title>Egornomic Mouse</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  Hello World!
+  <header id="header">
+    <img src="./img/mouse.png" id="header-img" alt="logo">
+  </header>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <!--
