--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 <body>
   <header id="header">
+    <nav id="nav-bar">
+      <ul>
+        <li><a href="#home" class="navlink">Home</a></li>
+        <li><a href="#about" class="navlink">About</a></li>
+        <li><a href="#product" class="navlink">Products</a></li>
+        <li><a href="#contact" class="navlink">Contact Us</a></li>
+      </ul>
+    </nav>
     <img src="./img/mouse.png" id="header-img" alt="logo">
   </header>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
