--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <header id="header">
     <nav id="nav-bar">
       <ul>
-        <li><a href="#home" class="navlink">Home</a></li>
-        <li><a href="#about" class="navlink">About</a></li>
-        <li><a href="#product" class="navlink">Products</a></li>
-        <li><a href="#contact" class="navlink">Contact Us</a></li>
+        <li><a href="#home" class="nav-link">Home</a></li>
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#product" class="nav-link">Products</a></li>
+        <li><a href="#contact" class="nav-link">Contact Us</a></li>
       </ul>
     </nav>
     <img src="./img/mouse.png" id="header-img" alt="logo">
