--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@
         <li><a href="#contact" class="nav-link">Contact Us</a></li>
       </ul>
     </nav>
-    <img src="./img/mouse.png" id="header-img" alt="logo">
+    <section id="home">
+      <img src="./img/mouse.png" id="header-img" alt="logo">
+    </section>
   </header>
+  <main>
+    <section>
+      <h2 id="about">About</h2>
+    </section>
+    <section>
+      <h2 id="product">Products</h2>
+      <!--Video -->
+    </section>
+    <section>
+      <h2 id="contact">Contact Us</h2>
+      <!-- Form -->
+    </section>
+  </main>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <!--
