submit button added

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <h2 id="contact">Contact Us</h2>
       <!-- Form -->
       <form action="#" method="post" id="form">
-        <input type="email" id="email" name="">
-        <button type="submit">Submit</button>
+        <input type="email" id="email" name="" placeholder="Please enter your email">
+        <input type="submit" id="submit">
       </form>
     </section>
   </main>
